
CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
PROJECT("KabalaEngine")

#SET (CMAKE_VERBOSE_MAKEFILE TRUE)

####### Declaration of functions
FUNCTION(RECURSIVE_DIRECTORY_FIND DIR IGNORE_DIRS_MATCHING STRIP_PATH)
#Get the source files
FILE(GLOB HEADERS ${DIR}/[^~]*.h)
FILE(GLOB SOURCES ${DIR}/[^~]*.cpp)
FILE(GLOB INLINES ${DIR}/[^~]*.inl)

#Strip the path down to a relative one
FILE(RELATIVE_PATH THE_SOURCE_GROUP ${STRIP_PATH} ${DIR})
IF(THE_SOURCE_GROUP)
    STRING(REPLACE "/" "\\" THE_SOURCE_GROUP ${THE_SOURCE_GROUP})
ELSE(THE_SOURCE_GROUP)
    SET(THE_SOURCE_GROUP "\\")
ENDIF(THE_SOURCE_GROUP)


SOURCE_GROUP(${THE_SOURCE_GROUP} FILES ${HEADERS} ${SOURCES} ${INLINES})

FILE(GLOB THE_DIRS_AND_FILES ${DIR}/*)

FOREACH(THE_PATH ${THE_DIRS_AND_FILES})
    IF(IS_DIRECTORY ${THE_PATH})
        IF(${THE_PATH} MATCHES "${IGNORE_DIRS_MATCHING}")
        ELSE(${THE_PATH} MATCHES "${IGNORE_DIRS_MATCHING}")
            #Call this function on all directories within this one
            RECURSIVE_DIRECTORY_FIND(${THE_PATH} ${IGNORE_DIRS_MATCHING} ${STRIP_PATH})

        ENDIF(${THE_PATH} MATCHES "${IGNORE_DIRS_MATCHING}")
    ENDIF(IS_DIRECTORY ${THE_PATH})
ENDFOREACH(THE_PATH in ${THE_DIRS_AND_FILES})
ENDFUNCTION(RECURSIVE_DIRECTORY_FIND DIR IGNOR_DIRS_MATCHING)

######### Revision number
#FIND_PACKAGE(Subversion)
#IF(Subversion_FOUND)
#Subversion_WC_INFO(${CMAKE_HOME_DIRECTORY} Project)
#MESSAGE("Current revision is ${Project_WC_REVISION}")
#ENDIF(Subversion_FOUND)

######### Version
FILE(STRINGS ${CMAKE_SOURCE_DIR}/VERSION VersionFile)
STRING(REGEX MATCH "([0-9]+)\\.([0-9]+)\\.([0-9])+.*" VersionMatch ${VersionFile})

SET(KABALA_ENGINE_MAJOR_VERSION ${CMAKE_MATCH_1})
SET(KABALA_ENGINE_MINOR_VERSION ${CMAKE_MATCH_2})
SET(KABALA_ENGINE_PATCH_VERSION ${CMAKE_MATCH_3})
SET(KABALA_ENGINE_VERSION ${CMAKE_MATCH_0})
MESSAGE("Current Version is ${KABALA_ENGINE_VERSION}")

######## Authors
FILE(STRINGS ${CMAKE_SOURCE_DIR}/AUTHORS.txt KABALA_ENGINE_AUTHORS)

######## Website
FILE(STRINGS ${CMAKE_SOURCE_DIR}/WEBSITE.txt KABALA_ENGINE_WEBSITE)

######## IS 64 bit
IF( NOT APPLE )
    # check 64 bit
    IF( ${CMAKE_SIZEOF_VOID_P} EQUAL 4 )
        SET( HAVE_64_BIT 0 )
        MESSAGE("32 bit")
    ELSE( ${CMAKE_SIZEOF_VOID_P} EQUAL 4 )
        SET( HAVE_64_BIT 1 )
        MESSAGE("64 bit")
    ENDIF( ${CMAKE_SIZEOF_VOID_P} EQUAL 4 )
ELSE( NOT APPLE )
    SET( HAVE_64_BIT 0)
ENDIF( NOT APPLE )

######### OS X Specifics
IF(APPLE)
    SET(PLATFORM_COMPILE_FLAGS  "-arch i386 -mmacosx-version-min=10.5")
    SET(PLATFORM_LINKER_FLAGS "-arch i386 -mmacosx-version-min=10.5")
    SET(ENV{MACOSX_DEPLOYMENT_TARGET} 10.5)
ENDIF(APPLE)

######## Default Build Type
IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Debug")
ENDIF(NOT CMAKE_BUILD_TYPE)

#############
######### OpenSG
SET(OSG_COMPONENTS OSGBase 
    OSGCluster 
    OSGDrawable 
    OSGFileIO 
    OSGImageFileIO 
    OSGDynamics 
    OSGGroup 
    OSGState 
    OSGSystem 
    OSGUtil 
    OSGWindow 
    OSGText 
    OSGTBFileIO 
    OSGTBAnimation 
    OSGContribUserInterface 
    OSGContribSound 
    OSGContribLua 
    OSGContribLuaToolbox 
    OSGContribVideo 
    OSGContribPhysics 
    OSGContribParticleSystem
    )

IF(UNIX)
    IF(APPLE)
        LIST(APPEND OSG_COMPONENTS OSGWindowCarbon)
    ELSE(APPLE)
        LIST(APPEND OSG_COMPONENTS OSGWindowX)
    ENDIF(APPLE)
ENDIF(UNIX)

IF(WIN32)
    LIST(APPEND OSG_COMPONENTS OSGWindowWIN32)
ENDIF(WIN32)

FIND_PACKAGE(OpenSG REQUIRED COMPONENTS ${OSG_COMPONENTS})

#############
######## BOOST
FIND_PACKAGE(Boost COMPONENTS system filesystem program_options)
SET(Boost_USE_MULTITHREAD ON)
SET(Boost_STATIC_LIBS OFF)

FIND_PACKAGE(Boost COMPONENTS system filesystem program_options)

IF(Boost_FOUND AND Boost_MINOR_VERSION GREATER "34")
    SET(Boost_COMPONENTS system ${Boost_COMPONENTS})

    FIND_PACKAGE(Boost COMPONENTS ${Boost_COMPONENTS} REQUIRED)
ENDIF(Boost_FOUND AND Boost_MINOR_VERSION GREATER "34")

IF(Boost_FOUND)
    LIST(APPEND DEP_INCLUDE_DIRS ${Boost_INCLUDE_DIRS})
    LIST(APPEND DEP_LIBRARY_DIRS ${Boost_LIBRARY_DIRS})
    LIST(APPEND DEP_LIBRARIES ${Boost_SYSTEM_LIBRARY})
    LIST(APPEND DEP_LIBRARIES ${Boost_FILESYSTEM_LIBRARY})
    LIST(APPEND DEP_LIBRARIES ${Boost_PROGRAM_OPTIONS_LIBRARY})
ENDIF(Boost_FOUND)

#############
#### Collada (optional, depending on how OpenSG was built)

FIND_PACKAGE(Collada)

IF(COLLADA_FOUND)
    LIST(APPEND DEP_INCLUDE_DIRS ${COLLADA_INCLUDE_DIRS})
    LIST(APPEND DEP_LIBRARY_DIRS ${COLLADA_LIBRARY_DIRS})
    LIST(APPEND DEP_LIBRARIES ${COLLADA_LIBRARIES})
ENDIF(COLLADA_FOUND)

#############
######### FMod
OPTION(ENABLE_FMOD "Enable Fmod support in sound library." ON)
IF(ENABLE_FMOD)
    MESSAGE("Fmod Enabled")
    FIND_PATH(FMOD_BASE_DIR NAMES api/inc/fmod.h PATHS "/Developer/FMOD Programmers API")
    IF(NOT EXISTS ${FMOD_BASE_DIR})
        MESSAGE(SEND_ERROR "The supplied Fmod Base dir: ${FMOD_BASE_DIR} does not exist")
    ENDIF(NOT EXISTS ${FMOD_BASE_DIR})
    IF(NOT EXISTS ${FMOD_BASE_DIR}/api/inc)
        MESSAGE(SEND_ERROR "The Fmod Include dir: ${FMOD_BASE_DIR}/api/inc does not exist")
    ENDIF(NOT EXISTS ${FMOD_BASE_DIR}/api/inc)
    IF(NOT EXISTS ${FMOD_BASE_DIR}/api/lib)
        MESSAGE(SEND_ERROR "The Fmod Include dir: ${FMOD_BASE_DIR}/api/lib does not exist")
    ENDIF(NOT EXISTS ${FMOD_BASE_DIR}/api/lib)

    SET(FMOD_INC_DIR ${FMOD_BASE_DIR}/api/inc)
    SET(FMOD_LIB_DIR ${FMOD_BASE_DIR}/api/lib)
    IF(HAVE_64_BIT)
        SET(FMOD_LIBRARIES fmodex64)
    ELSE(HAVE_64_BIT)
        SET(FMOD_LIBRARIES fmodex)
    ENDIF(HAVE_64_BIT)
    LIST(APPEND DEP_INCLUDE_DIRS ${FMOD_INC_DIR})
    LIST(APPEND DEP_LIBRARY_DIRS ${FMOD_LIB_DIR})
    LIST(APPEND DEP_LIBRARIES ${FMOD_LIBRARIES})
ENDIF(ENABLE_FMOD)

#############
######### ODE
FIND_PATH(ODE_BASE_DIR include/ode/ode.h)
IF(NOT EXISTS ${ODE_BASE_DIR})
    MESSAGE(SEND_ERROR "The supplied ODE Base dir: ${ODE_BASE_DIR} does not exists")
ENDIF(NOT EXISTS ${ODE_BASE_DIR})
IF(NOT EXISTS ${ODE_BASE_DIR}/include)
    MESSAGE(SEND_ERROR "The ODE Include dir: ${ODE_BASE_DIR}/include does not exists")
ENDIF(NOT EXISTS ${ODE_BASE_DIR}/include)
IF(NOT EXISTS ${ODE_BASE_DIR}/lib)
    MESSAGE(SEND_ERROR "The ODE Include dir: ${ODE_BASE_DIR}/lib does not exists")
ENDIF(NOT EXISTS ${ODE_BASE_DIR}/lib)

SET(ODE_INC_DIR ${ODE_BASE_DIR}/include)
SET(ODE_LIB_DIR ${ODE_BASE_DIR}/lib)
SET(ODE_LIBRARIES ode)
LIST(APPEND DEP_INCLUDE_DIRS ${ODE_INC_DIR})
LIST(APPEND DEP_LIBRARY_DIRS ${ODE_LIB_DIR})
LIST(APPEND DEP_LIBRARIES ${ODE_LIBRARIES})

#Includes
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Source)
INCLUDE_DIRECTORIES(${OpenSG_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${DEP_INCLUDE_DIRS})

#Link dirs
LINK_DIRECTORIES(${OpenSG_LIBRARY_DIRS})
LINK_DIRECTORIES(${DEP_LIBRARY_DIRS})

######## Kabala Engine Executable
#Configure the version and config headers
SET(KABALA_ENGINE_BUILD_TYPE "${CMAKE_BUILD_TYPE}")
SET(KABALA_ENGINE_REPOSITORY_REVISION "${Project_WC_REVISION}")
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/Source/KEVersion.h.in ${CMAKE_SOURCE_DIR}/Source/KEVersion.h)

#Make the Source groups for these files
RECURSIVE_DIRECTORY_FIND(${CMAKE_SOURCE_DIR}/Source "/.svn" ${CMAKE_SOURCE_DIR}/Source)

#Get a listing of the Header, source, and inline files
#FILE(GLOB_RECURSE HEADERS ${CMAKE_SOURCE_DIR}/Source/[^~]*.h)
#FILE(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/Source/[^~]*.cpp)
#FILE(GLOB_RECURSE INLINES ${CMAKE_SOURCE_DIR}/Source/[^~]*.inl)

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Application/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Application/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Application/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/StartScreen/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/StartScreen/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/StartScreen/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Project/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Project/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Project/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Project/Scene/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Project/Scene/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Project/Scene/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Project/Activities/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Project/Activities/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Project/Activities/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Project/SceneObject/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Project/SceneObject/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Project/SceneObject/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Player/Commands/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Player/Commands/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Player/Commands/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Player/LuaGraphTreeModel/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Player/LuaGraphTreeModel/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Player/LuaGraphTreeModel/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Player/HierarchyPanel/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Player/HierarchyPanel/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Player/HierarchyPanel/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Player/ContentPanel/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Player/ContentPanel/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Player/ContentPanel/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Player/HelperPanel/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Player/HelperPanel/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Player/HelperPanel/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/Player/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/Player/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/Player/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

FILE(GLOB TEMP_HEADERS ${CMAKE_SOURCE_DIR}/Source/LuaBindings/[^~]*.h)
FILE(GLOB TEMP_SOURCES ${CMAKE_SOURCE_DIR}/Source/LuaBindings/[^~]*.cpp)
FILE(GLOB TEMP_INLINES ${CMAKE_SOURCE_DIR}/Source/LuaBindings/[^~]*.inl)

LIST(APPEND HEADERS ${TEMP_HEADERS})
LIST(APPEND INLINES ${TEMP_INLINES})
LIST(APPEND SOURCES ${TEMP_SOURCES})

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_DEBUG_POSTFIX "D")
ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_DEBUG_POSTFIX "")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

SET(EXECUTABLE_NAME "KabalaEngine${CMAKE_DEBUG_POSTFIX}")

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${HEADERS} ${SOURCES} ${INLINES} ${HEADERS_1} ${SOURCES_1} ${INLINES_1})

#Attach all of the libraries
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${OpenSG_LIBRARIES} ${DEP_LIBRARIES})

#Install the libraries
INSTALL(TARGETS ${EXECUTABLE_NAME}
    EXPORT  KabalaEngineExport
    RUNTIME DESTINATION bin 
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    COMPONENT Application)

######## KabalaEngine Icons and Data
OPTION(BUILD_ICONS "Build the Icon set for the Kabala Engine" ON)
OPTION(INCLUDE_APP_DATA "Include the data used by the Kabala Engine" ON)

IF(BUILD_ICONS)
    FIND_PROGRAM(INKSCAPE_EXECUTABLE inkscape)
    FIND_PROGRAM(CONVERT_EXECUTABLE convert)

    FILE(GLOB_RECURSE ICON_SVG_SOURCE_FILES ${CMAKE_SOURCE_DIR}/Data/Images/Source/Icons/*.svg)

    SET(BUILD_ICON_DIMENSION 64 CACHE STRING "Advanced: The vertical and horizontal dimenstions to use to create the icons.")
    SET(DISABLED_ICON_CONVERT_ARG_1 "-modulate" CACHE STRING "Advanced: The 1 argument to send to the convert command to generate the Disabled Icons.")
    SET(DISABLED_ICON_CONVERT_ARG_2 "100,0" CACHE STRING "Advanced: The 2 argument to send to the convert command to generate the Disabled Icons.")

    FOREACH(ICON_SVG_SOURCE_FILE ${ICON_SVG_SOURCE_FILES})
        FILE(RELATIVE_PATH ICON_SVG_NAME  ${CMAKE_SOURCE_DIR}/Data/Images/Source/Icons ${ICON_SVG_SOURCE_FILE})

        #Extract a short name for the icon svg file
        STRING(REGEX MATCH "(.*)[.]svg" ICON_SVG_NAME ${ICON_SVG_NAME})
        SET(ICON_SVG_NAME ${CMAKE_MATCH_1})

        SET(BASIC_IMG_PATH ${CMAKE_BINARY_DIR}/Data/Images/Icons/${ICON_SVG_NAME}/${ICON_SVG_NAME})

        FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/Data/Images/Icons/${ICON_SVG_NAME})

        #Command for making the Normal Icons
        ADD_CUSTOM_COMMAND(OUTPUT ${BASIC_IMG_PATH}Normal.png
            COMMAND ${INKSCAPE_EXECUTABLE} ${ICON_SVG_SOURCE_FILE} -w ${BUILD_ICON_DIMENSION} -h ${BUILD_ICON_DIMENSION} --export-png=${BASIC_IMG_PATH}Normal.png
            DEPENDS ${ICON_SVG_SOURCE_FILE})
        #Add this icon as a target
        LIST(APPEND ICON_PNG_TARGETS ${BASIC_IMG_PATH}Normal.png)

        IF(CONVERT_EXECUTABLE)
            #Command for making he disabled Icons
            ADD_CUSTOM_COMMAND(OUTPUT ${BASIC_IMG_PATH}Disabled.png
                COMMAND ${CONVERT_EXECUTABLE}  ${BASIC_IMG_PATH}Normal.png ${DISABLED_ICON_CONVERT_ARG_1} ${DISABLED_ICON_CONVERT_ARG_2} ${BASIC_IMG_PATH}Disabled.png
                DEPENDS ${BASIC_IMG_PATH}Normal.png)
            #Add this icon as a target
            LIST(APPEND ICON_PNG_TARGETS ${BASIC_IMG_PATH}Disabled.png)
        ENDIF(CONVERT_EXECUTABLE)

    ENDFOREACH(ICON_SVG_SOURCE_FILE ${ICON_SVG_SOURCE_FILES})

    ADD_CUSTOM_TARGET(Icons ALL COMMENT "Building the Icons"
        DEPENDS ${ICON_PNG_TARGETS})

    IF(INCLUDE_APP_DATA)
        #Installing the Icon Set
        INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/Data/Images/Icons
            DESTINATION share/KabalaEngine/Data/Images
            COMPONENT Data)
    ENDIF(INCLUDE_APP_DATA)
ENDIF(BUILD_ICONS)

IF(INCLUDE_APP_DATA)
    #Installing the Information 
    INSTALL(FILES ${CMAKE_SOURCE_DIR}/LICENSE.txt
        ${CMAKE_SOURCE_DIR}/README.txt
        ${CMAKE_SOURCE_DIR}/ABOUT.txt
        DESTINATION share/KabalaEngine/Data/Info
        COMPONENT Application
        )
    #Installing the Model Set
    INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/Data/Models
        DESTINATION share/KabalaEngine/Data
        COMPONENT Data
        PATTERN ".svn" EXCLUDE)
    #Installing the Documentation
    INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/Documentation
        DESTINATION share/KabalaEngine/Data
        COMPONENT Documentation
        PATTERN ".svn" EXCLUDE)
ENDIF(INCLUDE_APP_DATA)


######## Packaging
#INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A Virtual Reality application authoring tool.")
SET(CPACK_PACKAGE_VENDOR "David Kabala")

SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.txt")
SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.txt")
SET(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/WELCOME.txt")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")


SET(CPACK_PACKAGE_VERSION_MAJOR ${KABALA_ENGINE_MAJOR_VERSION})
SET(CPACK_PACKAGE_VERSION_MINOR ${KABALA_ENGINE_MINOR_VERSION})
SET(CPACK_PACKAGE_VERSION_PATCH ${KABALA_ENGINE_PATCH_VERSION})
SET(CPACK_PACKAGE_VERSION ${KABALA_ENGINE_VERSION})
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMAKE_VERSION_MAJOR}.${CMAKE_VERSION_MINOR}")
SET(CPACK_PACKAGE_FILE_NAME "KabalaEngine-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}")

#OS X Bundles
IF(APPLE)
    SET(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/Packaging/KabalaEngine-Icon-48x48.bmp")
    SET(CPACK_BUNDLE_PLIST "${CMAKE_SOURCE_DIR}/Packaging/OS X/Info.plist")
    SET(CPACK_BUNDLE_NAME "KabalaEngine")
    SET(CPACK_BUNDLE_ICON "${CPACK_PACKAGE_ICON}")
    SET(CPACK_BUNDLE_STARTUP_COMMAND "${CMAKE_SOURCE_DIR}/Packaging/OS X/KabalaEngine.sh")
ENDIF(APPLE)

#Linux
IF(UNIX)
    SET(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/Packaging/KabalaEngine-Icon-48x48.bmp")
ENDIF(UNIX)

#Windows
IF(WIN32)
    SET(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/Packaging/KabalaEngine-Icon-48x48.bmp")
ENDIF(WIN32)


IF(WIN32 AND NOT UNIX)
    # There is a bug in NSI that does not handle full unix paths properly. Make
    # sure there is at least one set of four (4) backlasshes.
    SET(CPACK_PACKAGE_ICON "${CMake_SOURCE_DIR}/Utilities/Release\\\\InstallIcon.bmp")
    SET(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\MyExecutable.exe")
    SET(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} My Famous Project")
    SET(CPACK_NSIS_HELP_LINK "http:\\\\\\\\www.my-project-home-page.org")
    SET(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\www.my-personal-home-page.com")
    SET(CPACK_NSIS_CONTACT "me@my-personal-home-page.com")
    SET(CPACK_NSIS_MODIFY_PATH ON)
ELSE(WIN32 AND NOT UNIX)
    #SET(CPACK_STRIP_FILES "bin/KabalaEngine")
    #SET(CPACK_SOURCE_STRIP_FILES "")
ENDIF(WIN32 AND NOT UNIX)
SET(CPACK_PACKAGE_EXECUTABLES "KabalaEngine" "KabalaEngine")

INCLUDE(CPack)
